# discuits_api

./: .gitignore  CREDITS  Cargo.toml  README.md  license.html  setup_arangodb.ps1  setup_arangodb.sh  setup_arangodb_test_env.js  setup_arangodb_test_env.js.rs
model-write-derive/: Cargo.toml
model-write-derive/src/: constructor.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  preludes.rs  time.rs
src/engine/: db.rs  file_system.rs  mod.rs  session.rs
src/engine/db/: arangodb.rs  mod.rs  ops.rs
src/engine/db/arangodb/: aql_marco.rs  aql_snippet.rs  mod.rs  ops.rs  preludes.rs
src/engine/db/mongodb/: mod.rs
src/engine/db/pgsql/: mod.rs
src/engine/file_system/: mod.rs
src/io/: delete.rs  mod.rs  read.rs  write.rs
src/models/: album.rs  artist.rs  edge.rs  fake.rs  inventory.rs  mod.rs  variant.rs
src/models/album/: ver.rs
tests/: Initalization.rs  initialisation.rs  insertions.rs  reads.rs
