[package]
name = "discuits_api"
version = "0.1.0"
authors = ["Martin Smith <mcodesmith@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"


[dependencies]
async-trait = "0.1.41"
arangors = "0.4.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
dashmap = "^3"
nuid = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
tokio = { version = "*", features = ["full", "macros", "sync"] }

[dev-dependencies]
tokio = { version = "*", features = ["full", "macros"] }