[package]
name = "discuits_api"
version = "0.1.0"
authors = ["Martin Smith <mcodesmith@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"


[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.release]
lto = true


[dependencies]
model-write-derive = {path = "./model-write-derive"}
lazy_static = "1.4.0"
tokio = { version = "*", features = ["full", "macros", "sync"] }
async-trait = "^0.1"
arangors = "^0.4"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dashmap = "^3"

[dev-dependencies]
tokio = { version = "*", features = ["full", "macros"] }
futures = "0.3"
lazy_static = "1.4.0"
