[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discuits_api = { path = ".." }
actix-web = {git = "https://github.com/actix/actix-web.git"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"