[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discuits_api = { path = ".." }
actix-web = "4.0.0-beta.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"